tests/unit/default/syntax-error/092-add-pk-table-parens-name-comma.x.t
---- IN ----
+PK%table(id,|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...K%table(id` near `,|` at position 12 - at line 1
---- EXIT ----
1
